<resources>
    <string name="app_name">Ecstasy of Gold</string>
    <string name="admob_app_id">"ca-app-pub-4362297455776086~3908913120"</string>
    <string name="view_power">View \nPower</string>
    <string name="life">Life+</string>
    <string name="shoot">Shoot</string>
    <string name="get_tool">Get \nTool</string>
    <string name="buy_sell_tool">Buy/Sell \nTool</string>
    <string name="firing_power">Swap \nFiring \nPower</string>
    <string name="open_coffin">Open \nCoffin</string>
    <string name="view__power">View Power</string>
    <string name="increase__life">Increase Life</string>
    <string name="tap_on_an_opponent_to_swap_with">Tap on an opponent to swap with!</string>
    <string name="swap__firing_power">Swap Firing Power with</string>
    <string name="got_one_more">Got one more</string>
    <string name="spade">Spade</string>
    <string name="map">Map</string>
    <string name="water">Water</string>
    <string name="tap_on_an_unprotected_opponent_to_shoot">Tap on an unprotected opponent to shoot!</string>
    <string name="dead">dead.</string>
    <string name="received_all_their_tools">received all their tools.</string>
    <string name="inventory">Inventory</string>
    <string name="tap_on_an_unopened_coffin_to_open">Tap on an unopened coffin to open!</string>
    <string name="and_found_the_gold">and found the gold</string>
    <string name="you_have_opened_a_coffin">You have opened a coffin</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="buy__sell_tool">Buy/Sell Tool</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="sell_2_tools">Sell 2 tools</string>
    <string name="buy_1_tool">Buy 1 tool</string>
    <string name="winner">Winner</string>
    <string name="wins_the_game">wins the game</string>
    <string name="increased_life">Increased life</string>
    <string name="opened_a_coffin">Opened a coffin</string>
    <string name="sold">Sold</string>
    <string name="bought">Bought</string>
    <string name="tool">tool</string>
    <string name="viewed_firing_power">Viewed firing power</string>
    <string name="shoots_at">Shoots at</string>
    <string name="hit">Hit</string>
    <string name="not_hit">Not Hit</string>
    <string name="hit_help">- Hit: Lose 1 life.</string>
    <string name="not_hit_help">- Not Hit: Your and your opponent\'s firing power will be compared and whose is lower, lose 2 lives.</string>
    <string name="history">History</string>
    <string name="close">close</string>
    <string name="shoots_at_you">shoots at you!</string>
</resources>
