<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/buySellLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightGrey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/buy__sell_tool"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/inventoryLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inventory"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/spadeInvIV"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:foreground="@drawable/spade" />

            <TextView
                android:id="@+id/spadeInvTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spade"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/mapInvIV"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/map" />

            <TextView
                android:id="@+id/mapInvTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/waterInvIV"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/water" />

            <TextView
                android:id="@+id/waterInvTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/toSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sell_2_tools"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_select"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/spadeSell1IV"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp" />

                    <ImageView
                        android:id="@+id/mapSell1IV"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp" />

                    <ImageView
                        android:id="@+id/waterSell1IV"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/spadeSell2IV"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp" />

                    <ImageView
                        android:id="@+id/mapSell2IV"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp" />

                    <ImageView
                        android:id="@+id/waterSell2IV"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buyLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_1_tool"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_select"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/spadeBuyIV"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp" />

            <ImageView
                android:id="@+id/mapBuyIV"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp" />

            <ImageView
                android:id="@+id/waterBuyIV"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/cancelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:textColor="@color/colorWhite"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/okTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:textColor="@color/colorWhite"
            android:text="@string/OK" />
    </LinearLayout>
</LinearLayout>